force-app/main/default/objects/FG_Email_Template__c/FG_Email_Template__c.object-meta.xml
<CustomObject>
    <label>FG Email Template</label>
    <nameField>
        <displayFormat>ETN-{00000}</displayFormat>
        <label>Email Template</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FG Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>