force-app/main/default/objects/FG_Email_Template__c/fields/Default_Field_to_Set_3__c.field-meta.xml
<CustomField>
    <fullName>Default_Field_to_Set_3__c</fullName>
    <label>Default Field to Set 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>