force-app/main/default/objects/FG_Email_Template__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <label>Email Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>