force-app/main/default/objects/FG_Email_Template__c/fields/Email_Text_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Text_Body__c</fullName>
    <label>Email Text Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>