force-app/main/default/objects/FG_Email_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Email_Template__c</columns>
    <columns>Template_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>